[gd_scene load_steps=9 format=3 uid="uid://briecop610pew"]

[ext_resource type="Script" path="res://UI/Inventory UI/inventory_slot.gd" id="1_xhq4i"]
[ext_resource type="Texture2D" uid="uid://bsde5v34wkxbd" path="res://Minigame/Assets/dust_blue3.png" id="2_jxl0g"]
[ext_resource type="FontFile" uid="uid://dc02una4tpsa6" path="res://UI/Fonts/Montserrat-Regular.ttf" id="3_b375o"]
[ext_resource type="StyleBox" uid="uid://ch8ink1m5hmpf" path="res://UI/Themes/invisibutton.tres" id="4_q5oeq"]
[ext_resource type="StyleBox" uid="uid://x0wpkbun7x3m" path="res://UI/Themes/InfoPanel.tres" id="5_ee8hb"]
[ext_resource type="FontFile" uid="uid://vclehh6m7m6g" path="res://UI/Fonts/Montserrat-Bold.ttf" id="5_ow43b"]
[ext_resource type="FontFile" uid="uid://cna7agfpnbfe3" path="res://UI/Fonts/Montserrat-Medium.ttf" id="6_fenwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psjat"]
bg_color = Color(0.054902, 0.0823529, 0.145098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.901961, 0.717647, 0.466667, 1)

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -900.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhq4i")

[node name="UsagePanel" type="PanelContainer" parent="."]
z_index = 3
layout_mode = 2
offset_left = 93.0
offset_top = 48.0
offset_right = 213.0
offset_bottom = 129.0
theme_override_styles/panel = ExtResource("5_ee8hb")

[node name="MarginContainer" type="MarginContainer" parent="UsagePanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel/MarginContainer"]
layout_mode = 2

[node name="InspectButton" type="Button" parent="UsagePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_fenwj")
theme_override_styles/normal_mirrored = ExtResource("4_q5oeq")
theme_override_styles/normal = ExtResource("4_q5oeq")
text = "Inspect"
alignment = 0

[node name="DropButton" type="Button" parent="UsagePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_fenwj")
theme_override_styles/normal = ExtResource("4_q5oeq")
text = "Drop Item"
alignment = 0

[node name="CancelButton" type="Button" parent="UsagePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_fenwj")
theme_override_styles/normal = ExtResource("4_q5oeq")
text = "Return"
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_psjat")

[node name="ItemIcon" type="Sprite2D" parent="MarginContainer/PanelContainer"]
texture_filter = 1
position = Vector2(42, 39)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_jxl0g")

[node name="ItemQuantity" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_b375o")
theme_override_font_sizes/font_size = 23
text = "12"

[node name="ItemButton" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("4_q5oeq")
theme_override_styles/normal = ExtResource("4_q5oeq")

[node name="DetailsPanel" type="PanelContainer" parent="."]
z_index = 2
layout_mode = 1
offset_left = 4.0
offset_top = 93.0
offset_right = 220.0
offset_bottom = 195.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("5_ee8hb")

[node name="MarginContainer" type="MarginContainer" parent="DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsPanel/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="DetailsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.054902, 0.0823529, 0.145098, 1)
theme_override_fonts/font = ExtResource("5_ow43b")
theme_override_font_sizes/font_size = 22
text = "BLUE STAR"

[node name="ItemAttribute1" type="Label" parent="DetailsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.054902, 0.0823529, 0.145098, 1)
theme_override_fonts/font = ExtResource("6_fenwj")
theme_override_font_sizes/font_size = 22
text = "Lv 30"

[node name="ItemAttribute2" type="Label" parent="DetailsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.054902, 0.0823529, 0.145098, 1)
theme_override_fonts/font = ExtResource("6_fenwj")
theme_override_font_sizes/font_size = 22
text = "33f22d3"

[connection signal="focus_entered" from="MarginContainer/ItemButton" to="." method="_on_item_button_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/ItemButton" to="." method="_on_item_button_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/ItemButton" to="." method="_on_item_button_pressed"]
